Fix section one alignment when zoomed out

--- a/style.css
+++ b/style.css
@@ -65,12 +65,17 @@ ul {
 
 /* SEC ONE */
 .one {
+    display: flex;
+    justify-content: center;
+}
+.hero {
     display:flex;
     flex-wrap: wrap-reverse;
     justify-content: center;
     align-items: center;
     padding: 80px 100px;
     gap:20px;
+    max-width: 1200px;
 }
 
 .intro {
